# peptide-dpt

./: .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml  requirements.txt
configs/: finetune.yaml  finetune_b200.yaml  grpo.yaml  grpo_b200.yaml  pretrain.yaml  pretrain_b200.yaml
data/: upload_hf.py
data/collect/: collect_bindingdb.py  collect_chembl.py  collect_chembl_general.py  collect_pdb.py
data/process/: prepare_pretrain.py  prepare_psma_sft.py  smiles_to_selfies.py
docking/: box_config.json  prepare_receptor.py  run_gnina.py
ds_configs/: zero2.json
inference/: generate.py
reward/: combined.py  diversity.py  docking.py  sa_score.py
scripts/: run_finetune.sh  run_grpo.sh  run_pretrain.sh  setup_env.sh
tokenizer/: selfies_tokenizer.py  selfies_vocab.json
training/: dataset.py  finetune_psma.py  grpo.py  pretrain.py
